# neonment

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  export_presets.cfg  flake.nix  icon.png.import  project.godot  shell.nix  todo.cache.ini
.cargo/: config
.gitlab/issue_templates/: bug.md  feature_request.md
.gitlab/merge_request_templates/: default.md
.import/: sample.csv-a43505412796765c81f547218e383389.md5
client/: Cargo.toml  config.json  entrypoint.tscn  main.tscn
client/asset/: def_env.tres
client/entity_vis/: test_player.tscn
client/map_vis/: env.tres  test.tscn
client/script/: entrypoint.gd  game_logic.gd  input.gd  networking.gd
client/scripts/: entrypoint.gd  game_logic.gd  hud.gd  main_menu.gd  networking.gd
client/src/: main.rs
client/ui/: credits.gd  credits.tscn  hud.gd  hud.tscn  lobby.gd  lobby.tscn  main_menu.gd  main_menu.tscn  multiplayer.gd  multiplayer.tscn  settings.gd  settings.tscn
common/: Cargo.toml  main.tscn
common/entities/: player.tscn
common/entities/player/: player.gd  player.tscn
common/entity/: player.gd  test_player.tscn
common/map_col/: test.tscn
common/script/: ability.gd  lobby.gd  movement.gd  player.gd  startpoint.gd  state.gd  utils.gd
common/script/ability/: ability.gd  dash.gd
common/scripts/: lobby.gd  player.gd  utils.gd
common/src/: error.rs  lib.rs  recv.rs  send.rs
map_full/: test.tscn
server/: Cargo.toml  config.json  entrypoint.tscn  lobby.tscn  main.tscn
server/map_sp/: test.tscn
server/script/: entrypoint.gd  game_logic.gd  lobby.gd  (+1 more)
(+10 files in other folders)
